Scrollbar width in firefox fixed

--- a/client/source/index.scss
+++ b/client/source/index.scss
@@ -27,6 +27,7 @@ html, body {
   box-sizing: border-box;
 
   color: $main-text-color;
+  scrollbar-width: none;
 }
 
 #root {
