--- a/client/source/layouts/Main/Chat/Chat.scss
+++ b/client/source/layouts/Main/Chat/Chat.scss
@@ -13,6 +13,8 @@
     width: 100%;
     overflow-y: scroll;
 
+    scrollbar-width: none;
+
     &::-webkit-scrollbar {
       display: none;
     }
